<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jass Kasse</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="frag_title_overview">Overview</string>
    <string name="frag_title_transactions">Transactions</string>
    <string name="frag_title_mail">Mail</string>
    <string name="frag_title_unknown">Unknown</string>
    <string name="labelSaldo">Balance</string>
    <string name="labelLastTransation">Last transaction</string>
    <string name="lastTransactionAmount">Amount</string>
    <string name="buDeposit">Deposit</string>
    <string name="buWithdraw">Withdraw</string>
    <string name="labelAmount">Amount</string>
    <string name="etHintComment">Comment</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="menuInsert">Insert</string>
    <string name="menuEdit">Edit</string>
    <string name="menuDelete">Delete</string>
    <string name="menuSend">Send</string>

</resources>